--- a/css/gaya.css
+++ b/css/gaya.css
@@ -37,8 +37,8 @@ padding-bottom: 50px;
 
 
 .mempelai{background-size: cover; display: block; color: #fff; background-position: center center;  background-attachment: fixed;}
-.laki {background-image: url(laki.jpg);}
-.wanita{background-image: url(wanita.jpg);}
+.laki {background-image: url(img/laki.jpg);}
+.wanita{background-image: url(img/wanita.jpg);}
 .data-laki{margin-right: 40%;}
 .data-wanita{margin-left: 40%}
 
