--- a/css/gaya.css
+++ b/css/gaya.css
@@ -32,13 +32,13 @@ padding-bottom: 50px;
 .atas .isi{color: #fff;}
 
 .tanggal{position: relative; background: #fff; color: red;}
-.tanggal:before{content: ""; position: absolute; background:url(img/pattern.png) repeat-x; height:7px; top:-7px; left:0; width: 100%; }
-.tanggal:after{content: ""; position: absolute; background:url(img/pattern2.png) repeat-x; height:7px; right:0; bottom:-7px; width: 100%; }
+.tanggal:before{content: ""; position: absolute; background:url(/img/pattern.png) repeat-x; height:7px; top:-7px; left:0; width: 100%; }
+.tanggal:after{content: ""; position: absolute; background:url(/img/pattern2.png) repeat-x; height:7px; right:0; bottom:-7px; width: 100%; }
 
 
 .mempelai{background-size: cover; display: block; color: #fff; background-position: center center;  background-attachment: fixed;}
-.laki {background-image: url(img/laki.jpg);}
-.wanita{background-image: url(img/wanita.jpg);}
+.laki {background-image: url(/img/laki.jpg);}
+.wanita{background-image: url(/img/wanita.jpg);}
 .data-laki{margin-right: 40%;}
 .data-wanita{margin-left: 40%}
 
