--- a/css/gaya.css
+++ b/css/gaya.css
@@ -54,7 +54,7 @@ padding-bottom: 50px;
 .footer a{color: #fff;}
 
 .nama{font-size: 70px; font-weight: 200; color: #c2185b; letter-spacing: -1px; line-height: 110%;}
-.garis{background:url(underline.png) no-repeat; background-position: center center; height: 55px; width: 100%;}
+.garis{background:url(/img/underline.png) no-repeat; background-position: center center; height: 55px; width: 100%;}
 
 
 
