--- a/css/gaya.css
+++ b/css/gaya.css
@@ -62,6 +62,7 @@ padding-bottom: 50px;
 /* 11a - Tampilan = 600px s/d 900px
 ---------------------------------------------------------------------------------------------------------- */
 @media screen and (min-width:601px) { 
+.isi{ padding: 60px 30px;}
 .data-laki{margin-right: 40%;}
 .data-wanita{margin-left: 40%}
 }
