--- a/css/gaya.css
+++ b/css/gaya.css
@@ -14,7 +14,7 @@ iframe{border:none;overflow:hidden}
 
 .tampilan{position:relative; padding:0; margin:0; overflow: hidden; } 
 .atas{
-background-image:url(https://www.sebarundangan.id/themes/wedding-minimalist/assets/img/header-image.jpg);
+background-image:url(/img/adizhie.jpg);
 position: relative;
 Background-color: rgba(0,0,0,0.5);
 background-repeat: no-repeat;
