--- a/css/gaya.css
+++ b/css/gaya.css
@@ -45,7 +45,7 @@ padding-bottom: 50px;
 .arrum:before, .footer:before{content: ""; position: absolute; background:url(/img/pattern3.png) repeat-x; height:7px; top:-7px; left:0; width: 100%; }
 .arrum:after{content: ""; position: absolute; background:url(/img/pattern4.png) repeat-x; height:7px; right:0; bottom:-7px; width: 100%; }
 
-.bawah{background: #ebe8de; padding-top: 50px; padding-bottom: 50px; border-bottom: 2px dashed #fff; font-weight: 400;}
+.bawah{position: relative; background: #ebe8de; padding-top: 50px; padding-bottom: 50px; border-bottom: 2px dashed #fff; font-weight: 400;}
 .footer{margin-top: -17px; font-size: 12px; padding:10px 0;}
 .footer a{color: #fff;}
 
