--- a/css/gaya.css
+++ b/css/gaya.css
@@ -33,14 +33,14 @@ padding-bottom: 50px;
 
 .tanggal{position: relative; background: #fff;}
 .tanggal:before{content: ""; position: absolute; background:url(/img/pattern.png) repeat-x; height:7px; top:-7px; left:0; width: 100%; }
-.tanggal:after, .bawah:after{content: ""; position: absolute; background:url(/img/pattern2.png) repeat-x; height:7px; right:0; bottom:-7px; width: 100%; }
+.tanggal:after{content: ""; position: absolute; background:url(/img/pattern2.png) repeat-x; height:7px; right:0; bottom:-7px; width: 100%; }
 
 
 .mempelai{background-size: cover; display: block; color: #fff; background-position: center center;  background-attachment: fixed;}
 .laki {background-image: url(/img/laki.jpg);}
 .wanita{background-image: url(/img/wanita.jpg);}
 
-.arrum, .footer{background: #1e6c93; color: #fff; }
+.arrum, .footer{position: relative; background: #1e6c93; color: #fff; }
 .arrum .isi{font-size: 20px; line-height: 30px; font-family: "Roboto Slab", sans-serif; font-weight: 400; letter-spacing: -1px;}
 .arrum:before, .footer:before{content: ""; position: absolute; background:url(/img/pattern3.png) repeat-x; height:7px; top:-7px; left:0; width: 100%; }
 .arrum:after{content: ""; position: absolute; background:url(/img/pattern4.png) repeat-x; height:7px; right:0; bottom:-7px; width: 100%; }
