--- a/css/gaya.css
+++ b/css/gaya.css
@@ -1,4 +1,4 @@
-body{ background-color: #FFF; margin: 0; padding: 0; border: none; font-family: "Roboto Slab", sans-serif; font-size: 18px; font-weight: 400; line-height: 27px; text-align: center; }
+body{ background-color: #FFF; margin: 0; padding: 0; border: none; font-family: "Roboto", sans-serif; font-size: 18px; font-weight: 400; line-height: 27px; text-align: center; }
 h1, h2, h3, h4, h5, h6{padding: 0; margin: 0; font-family: "Oswald", sans-serif; font-weight: 700; text-shadow: rgba(0, 0, 0, 0.3) 0px 2px 0px;}
 h1{font-size:120px; line-height: 120%;  }
 h2{line-height: 60px;}
@@ -48,7 +48,7 @@ padding-bottom: 50px;
 .footer{margin-top: -17px; font-size: 12px; padding:10px 0;}
 .footer a{color: #fff;}
 
-.nama{font-size: 70px; font-weight: 500; color: #c2185b; letter-spacing: -2px; line-height: 110%;}
+.nama{font-size: 55px; font-weight: 500; color: #c2185b; letter-spacing: -2px; line-height: 110%;}
 .garis{background:url(/img/underline.png) no-repeat; background-position: center center; height: 55px; width: 100%;}
 
 /* Sentuhan RESPONSIVE
